--- a/src/components/landing-page/hero-section/hero.module.scss
+++ b/src/components/landing-page/hero-section/hero.module.scss
@@ -1,2 +1,169 @@
 @import "../../../scss/variables";
 
+// using the BEM system
+
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1.25rem;
+}
+
+p {
+  color: $blackText;
+}
+
+@mixin img_fluid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@mixin button {
+  width: 183.84px;
+  height: 47.98px;
+  border-radius: 8px;
+  text-transform: uppercase;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.hero {
+  position: relative;
+  height: 100vh;
+  font-size: 16px;
+  text-align: center;
+  color: $black;
+  overflow: hidden;
+
+  .hero__bg_img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url("https://res.cloudinary.com/kingsleysolomon/image/upload/v1668648043/hng/todoAppVirtualAssistant/Group_3_hzbhze.svg")
+      bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: blur(20px);
+  }
+
+  .hero__text_section {
+    .hero__title {
+      font-weight: 700;
+      line-height: 160%;
+      font-size: 34px;
+      margin: 2.6rem 0 1.4rem 0;
+
+      .hero__plan {
+        color: $accentOrange;
+      }
+    }
+
+    .hero__subtitle {
+      font-size: 1.125rem;
+      line-height: 180%;
+    }
+
+    .hero__btn_container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      margin: 2.75rem 0;
+
+      .button_getstarted {
+        @include button;
+        background-color: $activeColor;
+        color: $white;
+      }
+      .button_login {
+        @include button;
+        border: 1px solid $activeColor;
+        background-color: transparent;
+        color: $activeColor;
+      }
+    }
+  }
+
+  .hero__img {
+    width: fit-content;
+    margin: 0 auto;
+    .hero__mobile_img {
+      @include img_fluid;
+    }
+    .hero__destop_img {
+      display: none;
+    }
+  }
+}
+
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .hero {
+    height: 66rem;
+    .hero__bg_img {
+      background: url("https://res.cloudinary.com/kingsleysolomon/image/upload/v1668646951/hng/todoAppVirtualAssistant/Frame_34485_m2htfd.svg")
+        center;
+    }
+
+    .hero__text_section {
+      width: 42.7rem;
+      margin: 0 auto;
+      .hero__title {
+        font-weight: 700;
+        line-height: 160%;
+        font-size: 48px;
+        margin: 7.5rem 0 1.4rem 0;
+
+        .hero__plan {
+          color: $accentOrange;
+        }
+      }
+
+      .hero__subtitle {
+        font-size: 1.25rem;
+        line-height: 160%;
+      }
+
+      .hero__btn_container {
+        flex-direction: row;
+        justify-content: center;
+        gap: 2rem;
+      }
+    }
+
+    .hero__img {
+      .hero__mobile_img {
+        display: none;
+      }
+      .hero__destop_img {
+        display: block;
+        @include img_fluid;
+        margin-top: 7rem;
+      }
+    }
+  }
+}
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {
+}
