--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,6 @@ $accentOrange-light: rgba(247, 148, 31, 1);
 $white: rgba(255, 255, 255, 1);
 $black: rgba(51, 51, 51, 1);
 
-$activeColor: var(--activeColor-light);
-$blackText: var(--blackText-light);
-$accentOrange: var(--accentOrange-light);
+$activeColor: $activeColor-light;
+$blackText: $blackText-light;
+$accentOrange: $accentOrange-light;
