--- a/src/Components/Contact_map/Map.module.scss
+++ b/src/Components/Contact_map/Map.module.scss
@@ -52,10 +52,23 @@
           width: 18rem;
           height: 9rem;
           padding: 1rem;
+          p {
+            color: #e9f3f5;
+            font-family: Open Sans;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+            // margin-bottom: 1rem;
+          }
           .location {
             display: flex;
             gap: 2rem;
             margin-bottom: 10px;
+            .location1{
+                width: 1rem;
+            }
             h4 {
               font-family: Open Sans;
               font-size: 14px;
@@ -68,6 +81,7 @@
           }
           button {
             background-color: #714dd9;
+            max-width: 100%;
             width: 10rem;
             height: 2.5rem;
             cursor: pointer;
@@ -87,15 +101,7 @@
               color: #fafafa;
             }
           }
-          p {
-            color: #e9f3f5;
-            font-family: Open Sans;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 17px;
-            letter-spacing: 0em;
-            text-align: left;
-          }
+         
         }
       }
     }
@@ -160,8 +166,11 @@
 
           .direction {
             width: 15rem;
-            height: 9rem;
-            padding: 1rem;
+            height: 11rem;
+            
+            button{
+                margin-top: 1rem;
+            }
             .location {
               margin-bottom: 10px;
             }
