--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
-$font-sans: "DM Sans", sans-serif;
+$font-dm-sans: "DM Sans", sans-serif;
+$font-open-sans: "Open Sans", sans-serif;
 
 // light mode
 $activeColor-light: rgba(113, 77, 217, 1);
