--- a/src/layout/Footer.module.scss
+++ b/src/layout/Footer.module.scss
@@ -7,8 +7,11 @@
   flex-direction: column;
   align-items: center;
   background-color: #060c22;
-  padding: 3.125rem 0;
+  padding: 4rem 0;
   .footer_text {
+    @media screen and (max-width: 596px) {
+      max-width: 70%;
+    }
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
@@ -17,19 +20,25 @@
     text-align: center;
     letter-spacing: -0.231818px;
     color: #f6fafb;
-    max-width: 50%;
+    max-width: 40%;
     mix-blend-mode: normal;
     opacity: 0.5;
-    margin-top: 2rem;
+    margin-top: 4rem;
   }
   .footer_links {
+    @media screen and (max-width: 670px) {
+      flex-direction: column;
+    }
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 55%;
-    margin-top: 3.25rem;
+    width: 40%;
+    margin-top: 4rem;
     a {
+      @media screen and (max-width: 670px) {
+        margin-bottom: 1.5rem;
+      }
       font-family: "DM Sans";
       font-style: normal;
       font-weight: 400;
@@ -39,5 +48,16 @@
       color: #e9f3f5;
       text-decoration: none;
     }
+  }
+  .footer_socials {
+    @media screen and (max-width: 596px) {
+      width: 30%;
+    }
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 15%;
+    margin-top: 4rem;
   }
 }
