--- a/src/layout/Header.module.scss
+++ b/src/layout/Header.module.scss
@@ -1,4 +1,5 @@
 .header_wrap {
+  position: relative;
   width: 100%;
   background: white;
   padding: 20px 50px;
@@ -9,6 +10,9 @@
   border-bottom: 1px solid #704dd936;
 
   .header_right {
+    @media screen and (max-width: 850px) {
+      display: none;
+    }
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,24 +27,88 @@
         line-height: 20px;
         letter-spacing: -0.204545px;
         color: #707070;
-        margin-right: 1.25rem;
+        margin-right: 2rem;
+        padding-bottom: 0.3rem;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          border-bottom: 0.225rem solid #714dd9;
+        }
+      }
+      .header_links__border {
+        padding-bottom: 0.5rem;
+        border-bottom: 0.225rem solid #714dd9;
       }
     }
     .header_button {
+      margin-left: 3rem;
+    }
+  }
+  .header_hamburger {
+    @media screen and (min-width: 850px) {
+      display: none;
+    }
+    font-size: 2rem;
+    color: #292d32;
+    cursor: pointer;
+  }
+  .header_modalbackground {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.582);
+    z-index: 100;
+  }
+  .header_sidebar {
+    position: fixed;
+    top: 1.5rem;
+    right: 3rem;
+    z-index: 200;
+    background: #ffffff;
+    border-radius: 4px;
+    height: 25rem;
+    width: 18rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 2rem;
+
+    .header_sidebarButton {
+      margin-top: 3rem;
+    }
+    .header_sidebarClose {
       display: flex;
-      flex-direction: row;
-      justify-content: center;
+      width: 100%;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+    .header_sidebarLinks {
+      display: flex;
+      flex-direction: column;
       align-items: center;
-      padding: 14px;
-      background: #714dd9;
-      border-radius: 8px;
-      border: none;
-      font-family: "Open Sans";
-      font-style: normal;
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 160%;
-      color: #fafafa;
+      margin-top: 2rem;
+      a {
+        text-decoration: none;
+        font-family: "DM Sans";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.4rem;
+        line-height: 20px;
+        letter-spacing: -0.204545px;
+        color: #707070;
+        margin-bottom: 2rem;
+        transition: all 0.2s ease-in-out;
+
+        &:hover {
+          padding-bottom: 0.5rem;
+          border-bottom: 0.225rem solid #714dd9;
+        }
+      }
+      .header_links__border {
+        padding-bottom: 0.5rem;
+        border-bottom: 0.225rem solid #714dd9;
+      }
     }
   }
 }
