--- a/src/pages/PrivatePolicy.scss
+++ b/src/pages/PrivatePolicy.scss
@@ -19,7 +19,7 @@
 .privatepolicy h2{
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 1.5625rem;
     /* Light mode/Primary type */
     color: #333333;
 }
@@ -30,7 +30,7 @@
 .pagecontainer h1{
     font-style: normal;
     font-weight: 700;
-    font-size: 61px;
+    font-size: 3.8125rem;
     line-height: 160%;
     /* identical to box height, or 98px */
     /* Light mode/Primary color */
@@ -39,7 +39,7 @@
     margin: 0px 0px 1px;
 }
 .pagecontainer p{
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 180%;
     /* or 32px */
     margin: 12px 0;
@@ -53,7 +53,7 @@
     margin: 0px 0px 16px;
 }
 .personal_data p{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 120%;
     /* or 19px */
 }
@@ -66,7 +66,7 @@
     margin: 0px 0px 16px;
 }
 .how_we_use_data p{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 120%;
     /* or 19px */
 }
@@ -81,7 +81,7 @@
     /* identical to box height, or 40px */
 }
 .acceptance p{
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 120%;
     /* or 19px */
 }
@@ -93,7 +93,7 @@
     justify-content: center;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 120%;
     cursor: pointer;
 }
@@ -104,17 +104,17 @@
         margin: 32px auto;
     }
     .privatepolicy h2{
-        font-size: 23px;
+        font-size: 1.4375rem;
     }
     .privatepolicy a{
         text-decoration: underline;
     }
     .pagecontainer h1{
         text-align: left;
-        font-size: 47px;
+        font-size: 2.9375rem;
     }
     .pagecontainer p{
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 26px;
         margin: 8px 0px;
     }
@@ -125,7 +125,7 @@
         margin: 0px 0px 12px;
     }
     .personal_data p{
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 19px;
     }
     .how_we_use_data {
@@ -135,7 +135,7 @@
         margin: 0px 0px 12px;
     }
     .how_we_use_data p{
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 19px;
     }
     .how_we_use_data ul{
@@ -145,11 +145,11 @@
         margin: 20px 0;
     }
     .acceptance p{
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 120%;
     }
     .back_to_top a{
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 120%;
     }
     
@@ -166,18 +166,18 @@
         text-decoration: underline;
     }
     .pagecontainer h1{
-        font-size: 34px;
+        font-size: 2.125rem;
     }
     .pagecontainer p{
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 19px;
     }
     .personal_data p{
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 19px;
     }
     .how_we_use_data p{
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 19px;
     }
     .how_we_use_data ul{
@@ -187,7 +187,7 @@
         padding: 0px;
     }
     .back_to_top a{
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 18px;
     }
 }
