--- a/src/layout/CareerHero.module.scss
+++ b/src/layout/CareerHero.module.scss
@@ -1,10 +1,3 @@
-.container {
-    background: #F6FAFB;
-    width: 100%;
-    padding: 3.125rem 1rem 6.25rem 1rem;
-    font-family: 'Open Sans', sans-serif;
-}
-
 .hero,
 .topContainer,
 .headingContainer,
@@ -17,6 +10,8 @@
 
 .hero {
     gap: 3.125rem;
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 3.125rem;
 }
 
 .topContainer {
