--- a/src/pages/Career.module.scss
+++ b/src/pages/Career.module.scss
@@ -1,144 +1,9 @@
-.career {
+.wrapper {
   background: #f6fafb;
-  padding-bottom: 176px;
-}
-
-.jobOpenings h2 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 61px;
-  line-height: 160%;
-  color: #060c22;
-  margin-bottom: 8px;
-  text-align: start;
-}
-
-.sub {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 25px;
-  line-height: 160%;
-  color: #060c22;
-  margin-bottom: 40px;
-  text-align: start;
-}
-
-.jobOpenings form {
-  padding: 24px;
-  background: #ffffff;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 48px;
-  column-gap: 24px;
-  margin-bottom: 68px;
-}
-
-.inputWrapper {
-  grid-column: 1/4;
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-.inputWrapper img {
-  position: absolute;
-  left: 16px;
-}
-
-.jobOpenings form select {
-  padding: 16px;
-  background: #f6fafb;
-  border: 1px solid #714dd9;
-  border-radius: 8px;
-}
-
-.inputWrapper input {
-  width: 100%;
-  padding: 16px 16px 16px 56px;
-  background: #f6fafb;
-  border: 1px solid #714dd9;
-  border-radius: 8px;
-}
-
-.jobOpenings form input:focus,
-.jobOpenings form select:focus {
-  border: 1px solid #714dd9;
-  outline: none;
-}
-
-.jobOpenings form input::placeholder,
-.jobOpenings form select {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 120%;
-  color: #707070;
-}
-
-.jobOpenings form select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  text-indent: 1px;
-  text-overflow: "";
-  width: 100%;
-}
-
-.selectWrapper {
-  display: flex;
-  align-items: center;
-  position: relative;
-  right: 0;
-}
-
-.selectWrapper img {
-  position: absolute;
-  right: 16px;
 }
 
 .container {
-  max-width: 1288px;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 48px;
-  row-gap: 68px;
-}
-
-@media (max-width: 1120px) {
-  .grid {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media (max-width: 720px) {
-  .jobOpenings h2 {
-    font-size: 34px;
-    margin-bottom: 5px;
-  }
-  .sub {
-    font-size: 18px;
-  }
-  .jobOpenings form {
-    grid-template-columns: 1fr;
-  }
-
-  .inputWrapper {
-    grid-column: 1/1;
-  }
-  .grid {
-    grid-template-columns: 1fr;
-    row-gap: 30px;
-  }
-
-  .jobOpenings form {
-    row-gap: 20px;
-  }
+  max-width: 80.5rem;
+  width: 85vw;
+  margin: 0 auto;
 }
