--- a/src/components/landing-page/section-two/tag/tag.module.scss
+++ b/src/components/landing-page/section-two/tag/tag.module.scss
@@ -6,9 +6,8 @@
 }
 
 .tag {
-  border: 1px solid #d3d3d370;
-  box-shadow: rgba(113, 77, 217, 0.16) 0px 10px 36px 0px,
-    rgba(113, 77, 217, 0.06) 0px 0px 0px 1px;
+  border: 1px solid #d3d3d390;
+  box-shadow: rgba(113, 77, 217, 0.1) 0px 10px 50px;
   height: 2.52rem;
   background-color: $white;
   border-radius: 9px;
