--- a/src/components/landing-page/hero-section/hero.module.scss
+++ b/src/components/landing-page/hero-section/hero.module.scss
@@ -17,6 +17,11 @@
   border: none;
   cursor: pointer;
   font-weight: 600;
+  transition: .3s ease;
+
+  &:hover {
+    box-shadow: 0px 0px 0px 4px #714dd950;
+  }
 }
 // ====================
 // END OF MIXINS
