feat: create contact hero, popup and talk section

--- a/src/components/contact-popup/ContactPopup.scss
+++ b/src/components/contact-popup/ContactPopup.scss
@@ -59,4 +59,9 @@
             justify-content: flex-end;
         }
     }
+
+    @media screen and (max-width: 450px) {
+        width: 70vw;
+        right: 5%;
+    }
 }
