--- a/src/components/contact-hero/ContactHero.scss
+++ b/src/components/contact-hero/ContactHero.scss
@@ -33,16 +33,27 @@
         h1{
             font-weight: 700;
             font-size: 61px;
+            @media screen and (max-width: 600px) {
+                font-size: 2.5rem;
+            }
         }
         h3{
             font-weight: 700;
             font-size: 25px;
             margin-bottom: 10px;
+
+            @media screen and (max-width: 600px) {
+                font-size: 1.1rem;
+            }
         }
         p{
             font-weight: 400;
             font-size: 16px;
             margin-bottom: 10px;
+
+            @media screen and (max-width: 600px) {
+                font-size: .9rem;
+            }
         }
         button{
             background: #714DD9;
@@ -54,6 +65,7 @@
 
         @media screen and (max-width: 600px) {
             margin: 0 auto;
+            
         }
     }
 
