--- a/src/components/talk/Talk.scss
+++ b/src/components/talk/Talk.scss
@@ -29,7 +29,7 @@
         .item{
             font-weight: 700;
             font-size: 22px;
-            margin: 0 2rem;
+            margin: .7rem 2rem;
 
             .unit{
                 color: #714DD9;
@@ -52,7 +52,7 @@
     }
 
     @media screen and (max-width: 600px) {
-        h1{
+        h2{
             font-size: 27px;
         }
         p{
