rename styling file and resolve linking to component bug

--- a/src/Components/private-policy/Privatepolicy.scss
+++ b/src/Components/private-policy/Privatepolicy.scss
@@ -98,7 +98,7 @@
     cursor: pointer;
 }
 
-// media queries
+/* // media queries */
 @media screen and (max-width: 767px) {
     .pagecontainer{
         margin: 32px auto;
