--- a/src/Components/private-policy/Privatepolicy.scss
+++ b/src/Components/private-policy/Privatepolicy.scss
@@ -1,92 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-.pagecontainer{
-    max-width: 1244px;
-    margin: 23px auto;
-    padding: 0px 20px;
-}
 .privatepolicy{
     background: #E5E5E5;
     font-family: 'Open Sans', sans-serif;
-    text-align: left;
-}
-.privatepolicy p{
-    font-style: normal;
-    font-weight: 400;
-    /* Light mode/Secondary type */
-    color: #707070;
+    text-align: justify;
 }
 .privatepolicy h2{
     font-style: normal;
     font-weight: 700;
-    font-size: 1.5625rem;
-    /* Light mode/Primary type */
+    font-size: 1.563rem;
+    line-height: 160%;
     color: #333333;
+}
+.privatepolicy p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 180%;
+    color: #707070;
+    margin: 1.625rem 0 0;
+    padding: 0 0 1.625rem;
 }
 .privatepolicy a{
     color: #714DD9;
     text-decoration: none;
 }
-.pagecontainer h1{
+.pagecontainer{
+    max-width: 1244px;
+    margin: 1.438rem auto;
+    padding: 0px 20px;
+}
+.privacy_header h1{
+    padding: 0 0 0.25rem;
     font-style: normal;
     font-weight: 700;
-    font-size: 3.8125rem;
+    font-size: 3.813rem;
     line-height: 160%;
-    /* identical to box height, or 98px */
-    /* Light mode/Primary color */
     color: #714DD9;
     text-align: center;
-    margin: 0px 0px 1px;
 }
-.pagecontainer p{
+.privacy_header p{
     font-size: 1.125rem;
-    line-height: 180%;
-    /* or 32px */
-    margin: 12px 0;
 }
-.personal_data{
-    margin: 32px 0;
+.privacy_header a{
+    text-decoration: underline;
 }
-.personal_data h2{
-    line-height: 160%;
-    /* identical to box height, or 40px */
-    margin: 0px 0px 16px;
+.blockparagraph{
+    margin: 4.25rem 0;
 }
-.personal_data p{
-    font-size: 1rem;
-    line-height: 120%;
-    /* or 19px */
-}
-.how_we_use_data{
-    margin: 32px 0;
-}
-.how_we_use_data h2{
-    line-height: 160%;
-    /* identical to box height, or 40px */
-    margin: 0px 0px 16px;
-}
-.how_we_use_data p{
-    font-size: 1rem;
-    line-height: 120%;
-    /* or 19px */
-}
-.how_we_use_data ul{
-    margin: 0px 0px 0px 20px;
-}
-.acceptance{
-    margin: 32px 0;
-}
-.acceptance h2{
-    line-height: 160%;
-    /* identical to box height, or 40px */
-}
-.acceptance p{
-    font-size: 1rem;
-    line-height: 120%;
-    /* or 19px */
-}
+
+// .pagecontainer p{
+//     font-size: 1.125rem;
+//     margin: 12px 0;
+// }
+// .personal_data{
+//     margin: 32px 0;
+// }
+// .personal_data h2{
+//     line-height: 160%;
+//     margin: 0px 0px 16px;
+// }
+// .personal_data p{
+//     font-size: 1rem;
+//     line-height: 120%;
+// }
+// .how_we_use_data{
+//     margin: 32px 0;
+// }
+// .how_we_use_data h2{
+//     line-height: 160%;
+//     margin: 0px 0px 16px;
+// }
+// .how_we_use_data p{
+//     font-size: 1rem;
+//     line-height: 120%;
+// }
+// .how_we_use_data ul{
+//     margin: 0px 0px 0px 20px;
+// }
+// .acceptance{
+//     margin: 32px 0;
+// }
+// .acceptance h2{
+//     line-height: 160%;
+// }
+// .acceptance p{
+//     font-size: 1rem;
+//     line-height: 120%;
+// }
 .back_to_top{
-    padding: 68px 0px 117px;
+    padding: 0 0 8.563rem;
 }
 .back_to_top a{
     display: flex;
