--- a/src/Components/private-policy/Privatepolicy.scss
+++ b/src/Components/private-policy/Privatepolicy.scss
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .privatepolicy{
-    background: #E5E5E5;
+    background: #f6fafb;
     font-family: 'Open Sans', sans-serif;
     text-align: justify;
 }
 .privatepolicy h2{
     font-style: normal;
     font-weight: 700;
-    font-size: 1.563rem;
+    font-size: 1.5625rem;
     line-height: 160%;
     color: #333333;
 }
@@ -27,20 +27,21 @@
 }
 .pagecontainer{
     max-width: 1244px;
-    margin: 1.438rem auto;
+    margin: 1.4375rem auto;
     padding: 0px 20px;
 }
 .privacy_header h1{
     padding: 0 0 0.25rem;
     font-style: normal;
     font-weight: 700;
-    font-size: 3.813rem;
+    font-size: 3.8125rem;
     line-height: 160%;
     color: #714DD9;
     text-align: center;
 }
 .privacy_header p{
     font-size: 1.125rem;
+    margin: 1.875rem 0 0;
 }
 .privacy_header a{
     text-decoration: underline;
@@ -48,48 +49,8 @@
 .blockparagraph{
     margin: 4.25rem 0;
 }
-
-// .pagecontainer p{
-//     font-size: 1.125rem;
-//     margin: 12px 0;
-// }
-// .personal_data{
-//     margin: 32px 0;
-// }
-// .personal_data h2{
-//     line-height: 160%;
-//     margin: 0px 0px 16px;
-// }
-// .personal_data p{
-//     font-size: 1rem;
-//     line-height: 120%;
-// }
-// .how_we_use_data{
-//     margin: 32px 0;
-// }
-// .how_we_use_data h2{
-//     line-height: 160%;
-//     margin: 0px 0px 16px;
-// }
-// .how_we_use_data p{
-//     font-size: 1rem;
-//     line-height: 120%;
-// }
-// .how_we_use_data ul{
-//     margin: 0px 0px 0px 20px;
-// }
-// .acceptance{
-//     margin: 32px 0;
-// }
-// .acceptance h2{
-//     line-height: 160%;
-// }
-// .acceptance p{
-//     font-size: 1rem;
-//     line-height: 120%;
-// }
 .back_to_top{
-    padding: 0 0 8.563rem;
+    padding: 0 0 8.5625rem;
 }
 .back_to_top a{
     display: flex;
@@ -101,96 +62,76 @@
     cursor: pointer;
 }
 
-/* // media queries */
+// media queries
 @media screen and (max-width: 767px) {
-    .pagecontainer{
-        margin: 32px auto;
-    }
     .privatepolicy h2{
-        font-size: 1.4375rem;
+        font-size: 1.40625rem;
+        line-height: 130%;
+        text-align: left;
+    }
+    .privatepolicy p{
+        font-size: 0.9375rem;
+        line-height: 180%;
+        margin: 0.8125rem 0 0;
+        padding: 0 0 0.8125rem;
     }
     .privatepolicy a{
         text-decoration: underline;
     }
-    .pagecontainer h1{
+    .pagecontainer{
+        margin: 0.71875rem auto;
+        padding-bottom: 2rem;
+    }
+    .privacy_header h1{
+        font-size: 2.875rem;
         text-align: left;
-        font-size: 2.9375rem;
     }
-    .pagecontainer p{
+    .privacy_header p{
         font-size: 1rem;
-        line-height: 26px;
-        margin: 8px 0px;
+        margin: 1.1875rem 0 0;
+        padding: 0 0 0.5rem;
     }
-    .personal_data{
-        margin: 64px 0px 20px;
+    .blockparagraph{
+        margin: 2.75rem 0;
     }
-    .personal_data h2{
-        margin: 0px 0px 12px;
-    }
-    .personal_data p{
-        font-size: 0.9375rem;
-        line-height: 19px;
-    }
-    .how_we_use_data {
-        margin: 20px 0;
-    }
-    .how_we_use_data h2{
-        margin: 0px 0px 12px;
-    }
-    .how_we_use_data p{
-        font-size: 0.9375rem;
-        line-height: 19px;
-    }
-    .how_we_use_data ul{
-        margin: 14px 28px;
-    }
-    .acceptance{
-        margin: 20px 0;
-    }
-    .acceptance p{
-        font-size: 0.9375rem;
-        line-height: 120%;
+    .back_to_top{
+        padding: 4.28125px;
     }
     .back_to_top a{
         font-size: 0.9375rem;
-        line-height: 120%;
+        font-weight: 500;
+        line-height: 118%;
     }
-    
-    
 }
+
 @media screen and (max-width: 480px){
-    .privatepolicy{
-        background: white;
-    }
     .privatepolicy h2{
-        font-size: 20px;
+        font-size: 1.25rem;
+        line-height: 100%;
     }
-    .privatepolicy a{
-        text-decoration: underline;
+    .privatepolicy p{
+        font-size: 0.875rem;
+        line-height: 180%;
     }
-    .pagecontainer h1{
+    .pagecontainer{
+        margin: 0rem auto;
+        padding-bottom: 2rem;
+    }
+    .privacy_header h1{
         font-size: 2.125rem;
     }
-    .pagecontainer p{
-        font-size: 0.875rem;
-        line-height: 19px;
+    .privacy_header p{
+        margin: 0.5rem 0 0;
     }
-    .personal_data p{
-        font-size: 0.875rem;
-        line-height: 19px;
-    }
-    .how_we_use_data p{
-        font-size: 0.875rem;
-        line-height: 19px;
-    }
-    .how_we_use_data ul{
-        margin: 14px 28px;
+    .blockparagraph{
+        margin: 1.25rem 0;
     }
     .back_to_top{
         padding: 0px;
     }
     .back_to_top a{
         font-size: 0.875rem;
-        line-height: 18px;
+        font-weight: 600;
+        line-height: 115%;
     }
 }
