--- a/src/Components/dasboard/Dashboard.module.scss
+++ b/src/Components/dasboard/Dashboard.module.scss
@@ -1,5 +1,17 @@
 .main {
+    &__appbar {
+        hr {
+            border: "5px solid #714DD9"
+        }
+    }
 
-    // container left
+    &__span {
+        margin-top: 12px;
+        span {
+            margin: 0px 5px;
+
+        }
+    }
+
     
 }
