--- a/src/layout/header/Header.module.scss
+++ b/src/layout/header/Header.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   background: white;
-  padding: 20px 50px;
+  padding: 1.25rem;
   display: flex;
   flex-direction: row;
   align-items: center;
