--- a/src/pages/FAQ/FAQ.scss
+++ b/src/pages/FAQ/FAQ.scss
@@ -1,86 +1,118 @@
+.top {
+    background-color: #F6FAFB;
+    width: 100%;
+    padding: 2.93rem 1rem;
+    margin-bottom: 2rem;
+
+    .ls {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.75rem;
+
+        .header-text {
+            text-align: center;
+            font-size: 1.125rem;
+            line-height: 1.8rem;
+            color: #333333;
+            font-weight: 700;
+
+        }
+
+        .sub-text {
+            font-size: 0.875rem;
+            line-height: 1.09rem;
+            color: #707070;
+            font-weight: 700;
+            text-align: center;
+            align-self: center;
+            width: 80%;
+        }
+    }
+
+}
+
+
+
 .Topp {
     .faq {
         display: flex;
-        column-gap: 1.5rem;
+        flex-direction: column;
+        row-gap: 2.875rem;
         margin-bottom: 1.75rem;
-
         font-weight: 700;
+
+        .mapped {
+            .question-toggle {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                .question {
+                    font-size: 0.875rem;
+                    font-weight: 700;
+                    color: #333333;
+                    line-height: 1.575rem;
+                }
+            }
+
+            .sub {
+                margin-top: 0.5rem;
+                font-size: 0.875rem;
+                color: #707070;
+                text-align: left;
+                font-weight: 400;
+            }
+        }
     }
 
     .text {
         display: flex;
         flex-direction: column;
+        align-items: center;
         margin-top: 4rem;
 
         .contact {
             color: #333333;
-            font-weight: 700;
+            font-weight: 400;
             margin-bottom: 1.5rem;
             text-align: center;
-            font-size: 1rem;
+            font-size: 0.875rem;
         }
 
         .contact-sub {
             color: #714DD9;
-            font-weight: 700;
+            font-size: 0.875rem;
+            font-weight: 400;
+            margin-bottom: 2rem;
+            text-decoration-line: underline;
+            text-decoration-thickness: 1px;
+            text-decoration-color: #714DD9;
         }
     }
 }
 
-
-.activee {
-    color: #714DD9;
-    list-style: none;
-    text-decoration: none;
-    position: relative;
-    font-size: 1.125rem;
-    width: 6.25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    outline: none;
-    border: none;
-    background-color: #fff;
-    row-gap: 1.125rem;
-    margin-top: 2rem;
-
-    .line {
-        width: 5.75rem;
-        height: 0.25rem;
-        background-color: #714DD9;
-        border-radius: 0.125rem;
-    }
+.active {
+    display: block;
 }
 
-.inactivee {
-    color: #d3d0d9;
-    list-style: none;
-    text-decoration: none;
-    color: #d3d0d9;
-    position: relative;
-    font-size: 18px;
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    outline: none;
-    border: none;
-    background-color: #fff;
-    row-gap: 1.125rem;
-    margin-top: 32px;
-
-    .line {
-        width: 92px;
-        height: 0.25rem;
-        background-color: #d3d0d9;
-        border-radius: 2px;
-    }
+.inactive {
+    display: none;
 }
 
 .container {
     margin-left: 1.25rem;
     margin-right: 1.25rem;
     max-width: 915px;
+}
+
+.container_2 {
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+    max-width: 616px;
 }
 
 @media screen and (max-width:360px) {
@@ -101,10 +133,82 @@
     }
 }
 
+@media screen and (min-width:426px) {
+    .top {
+        padding: 5.68rem 1.5rem;
+
+        .ls {
+            .header-text {
+                font-size: 1.3rem;
+                line-height: 2.2rem;
+            }
+
+            .sub-text {
+                width: 60%;
+            }
+        }
+    }
+}
+
+
+@media screen and (min-width:616px) {
+    .Topp{
+        .faq{
+            .mapped{
+                .question-toggle{
+                    .question{
+                        font-size: 1rem;
+                   }
+                }
+            }
+        }
+    }
+    .container_2 {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+@media screen and (min-width:768px) {
+    .top {
+        padding-top: 6.5rem;
+        margin-bottom: 4rem;
+
+        .ls {
+            .header-text {
+                font-size: 1.9rem;
+                line-height: 2.2rem;
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .top {
+        margin-bottom: 7.68rem;
+        padding-top: 8.68rem;
+
+        .ls {
+            .header-text {
+                font-size: 2.437rem;
+                line-height: 3.875rem;
+            }
+
+            .sub-text {
+                font-size: 1rem;
+                width: 100%;
+            }
+        }
+    }
+}
+
+
 @media screen and (min-width: 820px) {
     .Topp {
         .text {
             flex-direction: row;
+            align-items: inherit;
             column-gap: 0.625rem;
         }
     }
