feat & style: landing-page-ticked section styled fixed

--- a/src/Components/landing-page/happy-client/happyClient.module.scss
+++ b/src/Components/landing-page/happy-client/happyClient.module.scss
@@ -53,6 +53,9 @@ p {
     justify-items: center;
 
     @media (min-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (min-width: 992px) {
       grid-template-columns: repeat(3, 1fr);
     }
   }
