--- a/src/Components/gift/Gift.module.scss
+++ b/src/Components/gift/Gift.module.scss
@@ -1,49 +1,77 @@
+@import "../../scss/variables";
+
+// ===================
+// MIXINS
+// ===================
+@mixin img_fluid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+// ====================
+// END OF MIXINS
+// ====================
+
+// using the BEM system
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1.25rem;
+}
+
 .main {
-    background-image: url("../../assets/home/bg-img.png");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+  background-image: url("../../assets/home/bg-img.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 
-    &__top {
-        h3 {
-            font-size: 2rem;
-            text-align: center;
-            font-weight: 700;
-            line-height: 160%;
-            @media (min-width: 900px) {
-                font-size: 3rem;
-            }
-        }
-        p {
-            font-size: 1.2rem;
-            font-weight: 400;
-            line-height: 140%;
-            text-align: center;
-            color: #707070;
-            margin-top: 20px;
-        }
-        button {
-            margin-top: 20px !important;
-            margin-bottom: -10px !important;
-            font-size: 0.8rem;
-            font-weight: 600;
-            line-height: 160%;
-            text-transform: uppercase;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 14px;
-            gap: 8px;
-            border: 1px solid #714DD9;
-            color: #714DD9;
-            border-radius: 8px;
-            margin: 0 auto;
-        }
+  &__top {
+    h3 {
+      font-size: 2rem;
+      text-align: center;
+      font-weight: 700;
+      line-height: 160%;
+      @media (min-width: 900px) {
+        font-size: 3rem;
+      }
     }
+    p {
+      font-size: 1.2rem;
+      font-weight: 400;
+      line-height: 140%;
+      text-align: center;
+      color: #707070;
+      margin-top: 20px;
+    }
+    button {
+      margin-top: 20px !important;
+      margin-bottom: -10px !important;
+      font-size: 0.8rem;
+      font-weight: 600;
+      line-height: 160%;
+      text-transform: uppercase;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 14px;
+      gap: 8px;
+      border: 1px solid #714dd9;
+      color: #714dd9;
+      border-radius: 8px;
+      margin: 0 auto;
+    }
+  }
 
-    &__bottom {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+  &__bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    img {
+      @include img_fluid;
     }
+  }
 }
