--- a/src/core/payment/Payment.css
+++ b/src/core/payment/Payment.css
@@ -217,10 +217,10 @@ button.submit__button {
     }
 
     .select__method h2 {
-        font-size: 0.3rem;
+        font-size: 1.3rem;
     }
     .select__method p {
-        font-size: 0.4rem;
+        font-size: 0.8rem;
     }
 }
 
@@ -278,14 +278,35 @@ button.submit__button {
         max-width: 90%;
         justify-content: space-between;
     }
-    .input___half {
-        gap: 10rem;
-    }
 }
 
 @media screen and (max-width: 500px) {
     .input___half {
         justify-content: space-between;
         gap: 0;
+    }
+}
+@media screen and (max-width: 440px) {
+    .input___pin input {
+        width: 3.3rem;
+        height: 3.5rem;
+    }
+    .select__method {
+        padding-right: 0rem;
+    }
+    .payment__form {
+        padding-left: 0rem;
+    }
+    .input___full,
+    .boxes,
+    button.submit__button,
+    .input___half {
+        max-width: 100%;
+    }
+    .button_button_wrap__vytmx {
+        width: 100%;
+    }
+    .input___half {
+        justify-content: flex-start;
     }
 }
