feat(TEA-88): landing-page

--- a/src/Components/gift/Gift.module.scss
+++ b/src/Components/gift/Gift.module.scss
@@ -75,3 +75,10 @@
     }
   }
 }
+.main__getStarted {
+  // border: 1px solid red;
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
