--- a/src/Components/why-ticked/whytickedbox.module.scss
+++ b/src/Components/why-ticked/whytickedbox.module.scss
@@ -10,7 +10,7 @@
   border-radius: 8px;
 
   @media (min-width: 1200px) {
-    width: 443px;
+    // width: 443px;
   }
 
   .whytickedbox__header {
