--- a/src/Components/PreferenceSetting/PreferenceForm.module.css
+++ b/src/Components/PreferenceSetting/PreferenceForm.module.css
@@ -44,8 +44,8 @@
 :local(.time) {
 	font-family: "Open Sans", sans-serif;
 	padding: 1rem;
-	width: 22rem;
-	height: 2rem;
+	width: 26rem;
+	height: 4rem;
 	background: #ffffff;
 	border: 1px solid #707070;
 	border-radius: 8px;
@@ -55,6 +55,7 @@
 }
 
 :local(.p) {
+	margin: 2.625rem 0rem 2.625rem;
 	font-weight: 600;
 	font-size: 1.125rem;
 	line-height: 180%;
@@ -67,6 +68,7 @@
 }
 
 :local(.prefformhead) {
+	margin-bottom: 1.625rem;
 	font-weight: 700;
 	font-size: 1.25rem;
 	margin-top: 2.5rem;
@@ -97,14 +99,20 @@
 }
 
 :local(.l) {
+	margin-top: 1rem;
+	margin-bottom: 1.625rem;
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.25rem;
 	color: #333333;
 }
 
-:local(.encheck) {
+:local(.check) {
+	margin: 0.25px;
 	display: initial;
+}
+:local(.rad) {
+	margin: revert;
 }
 
 @media screen and (max-width: 1300px) {
@@ -114,7 +122,7 @@
 		gap: 6rem;
 	}
 	:local(.pardate) {
-		gap: 6rem;
+		gap: 8rem;
 	}
 	:local(.radioar) {
 		justify-content: flex-start;
