--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
   font-family: $font-open-sans;
 }
 
-body{
-  font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
+  color: $black !important;
 }
