--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 14px;
+  height: 48px;
   background: #714dd9;
   border-radius: 8px;
   border: none;
