--- a/src/layout/header/Header.module.scss
+++ b/src/layout/header/Header.module.scss
@@ -2,12 +2,16 @@
   position: relative;
   width: 100%;
   background: white;
-  padding: 20px 50px;
+  padding: 20px 1.25rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #704dd936;
+
+  @media screen and (min-width: 992px) {
+    padding: 20px 50px;
+  }
 
   .header_right {
     @media screen and (max-width: 850px) {
@@ -65,12 +69,11 @@
   .header_sidebar {
     position: fixed;
     top: 1.5rem;
-    right: 3rem;
     z-index: 1100;
     background: #ffffff;
     border-radius: 4px;
-    height: 25rem;
-    width: 18rem;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,6 +81,9 @@
 
     .header_sidebarButton {
       margin-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
     .header_sidebarClose {
       display: flex;
