--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $accentOrange-light: rgba(247, 148, 31, 1);
 
 $white: rgba(255, 255, 255, 1);
 $black: rgba(51, 51, 51, 1);
+$footer: rgba(6, 12, 34, 1);
 
 $activeColor: $activeColor-light;
 $blackText: $blackText-light;
