--- a/src/core/auth/checkMail/CheckM.css
+++ b/src/core/auth/checkMail/CheckM.css
@@ -57,12 +57,12 @@
   margin: -5px 0 50px;
   cursor: pointer;
 }
-#code {
+#econtainer #code {
   margin-top: -10px;
   color: #714dd9;
 }
 
-#help {
+#econtainer #help {
   margin: -50px 0 50px;
 }
 
