Feat(TEA112): va modal

--- a/src/components/VA-modal/Va1.module.scss
+++ b/src/components/VA-modal/Va1.module.scss
@@ -1,4 +1,4 @@
-/* @import "../../scss/variables"; */
+@import "../../scss/variables";
 
 /* The following line can be included in a src/App.scss */
 
