--- a/src/pages/FAQ/FAQ.scss
+++ b/src/pages/FAQ/FAQ.scss
@@ -222,8 +222,7 @@
     }
 
     .container {
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto !important;
         max-width: 57.1875;
     }
 
